Opened 11 years ago

Closed 4 years ago

#10944 closed bug (fixed)

[strace] Signal description instead of signal name printed

Reported by: bonefish Owned by: korli
Priority: normal Milestone: R1/beta3
Component: Applications/Command Line Tools Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

I broke printing the name of the signal when working on the signal support in 2011. Instead of the signal name (e.g. "SIGCHLD") and the signal description (e.g. "Child exited") it now prints the signal description twice. Cf. http://cgit.haiku-os.org/haiku/diff/src/bin/debug/strace/strace.cpp?id=24df65921befcd0ad0c5c7866118f922da61cb96 for the offending change.

It might be good to introduce a (semi public) libroot function to return the signal name, so we only have a single place we need to maintain. Alternatively the build system could generate the list from <signal.h>, though that might not be entirely trivial.

Change History (4)

comment:1 by bonefish, 11 years ago

Owner: changed from nobody to bonefish
Status: newassigned

comment:2 by pulkomandy, 4 years ago

Milestone: R1R1.1

comment:3 by korli, 4 years ago

Milestone: R1.1R1/beta3
Owner: changed from bonefish to korli

comment:4 by korli, 4 years ago

Resolution: fixed
Status: assignedclosed

Applied in hrev55162

Note: See TracTickets for help on using tickets.